# stock-analysis-project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: clean_prices.csv  indicators.csv  stock_analysis_report.xlsx
notebooks/: stock_analysis.ipynb
reports/: stock_analysis.html
src/: analysis.py  config.py  data_loader.py  quality_checks.py  report.py  visualization.py
